--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       <img src="bg.jpg" height=400 width=90%/>
       <div class="tg">
       <h1><font color="red">Marvel Origami</font></h1>
-      <h3>Click on the images to view the instructions to make origami</h3>
-      <hr width="100%" size="3" color=#444444></hr>
       <i><font face="Georgia" color="darkgreen">We are an origamist group. Our goal is to show more people how to make origami while helping them improve
         their skills and promoting artists and others in the international paper folding community. If you have
         never folded anything before and want to learn how, we have an excellent guide for beginners.
         Our blog features amazing work from a variety of very talented artists, 
-        we also have a collection of book reviews and recommendations plus much more!</font></i></div>
+        we also have a collection of book reviews and recommendations plus much more!</font></i>
+        <hr width="100%" size="3" color=#444444></hr>
+        <h3>Click on the images to view the instructions to make origami</h3>
+      </div>
     </div>
 
     <div class="grid1">
